Finalizados el resto de ejercicios

--- a/index.html
+++ b/index.html
@@ -11,19 +11,26 @@
     <button onclick="pares()">Ejercicio 2</button>
     <button onclick="tablaMultiplicar()">Ejercicio 3</button>
     <button onclick="contarVocales()">Ejercicio 4</button>
-    <button onclick="">Ejercicio 5</button>
-    <button onclick="">Ejercicio 6</button>
+    <button onclick="numMayor()">Ejercicio 5</button>
+    <button onclick="triangulo()">Ejercicio 6</button>
     <button onclick="fizzBuzz()">Ejercicio 7</button>
-    <button onclick="">Ejercicio 8</button>
-    <button onclick="">Ejercicio 9</button>
-    <button onclick="">Ejercicio 10</button>
-    <button onclick="">Ejercicio 11</button>
-    <button onclick="">Ejercicio 12</button>
+    <button onclick="sumarNumeros()">Ejercicio 8</button>
+    <button onclick="invertirNumero()">Ejercicio 9</button>
+    <button onclick="menorMayorEdad()">Ejercicio 10</button>
+    <button onclick="palindromas()">Ejercicio 11</button>
+    <button onclick="adivinarNumero()">Ejercicio 12</button>
 
-    <script src="/js/ejercicio1.js"></script>
-    <script src="/js/ejercicio2.js"></script>
-    <script src="/js/ejercicio3.js"></script>
-    <script src="/js/ejercicio4.js"></script>
-    <script src="/js/ejercicio7.js"></script>
+    <script src="js/ejercicio1.js"></script>
+    <script src="js/ejercicio2.js"></script>
+    <script src="js/ejercicio3.js"></script>
+    <script src="js/ejercicio4.js"></script>
+    <script src="js/ejercicio5.js"></script>
+    <script src="js/ejercicio6.js"></script>
+    <script src="js/ejercicio7.js"></script>
+    <script src="js/ejercicio8.js"></script>
+    <script src="js/ejercicio9.js"></script>
+    <script src="js/ejercicio10.js"></script>
+    <script src="js/ejercicio11.js"></script>
+    <script src="js/ejercicio12.js"></script>
 </body>
 </html>
